k8s/vol-nfs-demo.yaml
#创建Pod绑定NFS存储卷
apiVersion: v1
kind: Pod
metadata:
  name: vol-nfs
  namespace: default
spec:
  volumes:
    - name: html
      nfs:
        path: /data/volumes
        server: 192.168.38.135
  containers:
    - name: myapp
      image: ikubernetes/myapp:v1
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/
