k8s/k8s-example-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-k8s-example
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-k8s-example
      release: canary
  template:
    metadata:
      labels:
        app: deploy-k8s-example
        release: canary
    spec:
      containers:
        - name: deploy-k8s-example
          image: k8s-example:latest
          commond: ["/bin/sh","-c","cat","/etc/config/redis.properties"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
      volumes:
        - name: config-volume
          configMap:
            name: redis-config
---
apiVersion: v1
kind: Service
metadata:
  name: svc-k8s-example
  namespace: default
spec:
  selector:
    app: deploy-k8s-example
    release: canary
  clusterIP: 10.43.238.38
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31181

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-k8s-example
  namespace: default
spec:
  rules:
    - host: myapp.along.com
      http:
        paths:
          - path:
            backend:
              serviceName: svc-k8s-example
              servicePort: 80
