k8s/k8s-example-my.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-k8s-example
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-k8s-example
      release: canary
  template:
    metadata:
      labels:
        app: deploy-k8s-example
        release: canary
    spec:
      containers:
        - name: deploy-k8s-example
          image: binguanghui/k8s-example
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-k8s-example
  namespace: default
spec:
  selector:
    app: deploy-k8s-example
    release: canary
  clusterIP: 10.43.238.29
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31180

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-k8s-example
  namespace: default
spec:
  rules:
    - host: myapp.along.com
      http:
        paths:
          - path:
            backend:
              serviceName: svc-k8s-example
              servicePort: 80
